--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -151,7 +151,7 @@
 	}
 
 	p {
-		margin: 0 0 2rem 0;
+		margin: 0;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -192,10 +192,12 @@
 
 	h3 {
 		font-size: 1rem;
+		margin: 0 0 .5rem 0;
 	}
 
 	h4 {
 		font-size: 0.8rem;
+		margin: 0;
 	}
 
 	h5 {
@@ -664,6 +666,28 @@
 
 			.image.main img {
 				width: 100%;
+			}
+
+        .image.journal {
+			display: block;
+			margin: 2.5rem 0;
+			width: 100%;
+		}
+
+			.image.journal img {
+				width: 100%;
+                height: 2.5rem;
+			}
+
+        .image.me {
+			display: block;
+			margin: 2.5rem 0;
+			width: 100%;
+		}
+
+			.image.me img {
+				width: 50%;
+                height: 50%;
 			}
 
 		@media screen and (max-width: 736px) {
@@ -1592,3 +1616,26 @@
 		body.is-loading #footer {
 			opacity: 0;
 		}
+
+/* Scrollbar */
+::-webkit-scrollbar {
+    width: .35em;
+}
+ 
+/* Track */
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 4px;
+    background: #959595; 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+::-webkit-scrollbar-thumb:window-inactive {
+	background: rgba(168,168,168,0.4); 
+}
